// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/file-icon/FileIcon should render 64 icon when dimension is defined 1`] = `
<FileDefault32
  height={64}
  width={64}
/>
`;

exports[`icons/file-icon/FileIcon should render default 32 icon when no extension and dimension is defined 1`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 1`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 2`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 3`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 4`] = `
<FileDocs32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 5`] = `
<FileSheets32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 6`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 7`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 8`] = `
<FileKeynote32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 9`] = `
<FileNumbers32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 10`] = `
<FilePages32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 11`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 12`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 13`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 14`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 15`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 16`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 17`] = `
<FileZip32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 18`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 19`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 20`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render the expected icon when extension is defined 21`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/file-icon/FileIcon should render title when title is defined 1`] = `
<FileDefault32
  height={32}
  title="title"
  width={32}
/>
`;
